# trinamic_pd42_can

./: CMakeLists.txt  README.md  package.xml
config/: TMCM-1270.eds  bus.yml  master.dcf
config/single-pd42/: TMCM-1270.eds  bus.yml
launch/: direct_launch.launch.py  direct_launch.py  mock_launch.launch.py  real_hw_launch.launch.py
src/: position_tick_motor.cpp
